app/assets/stylesheets/components/_projects_information.scss
.trigger {
  display: none;
}

.slider,
.slider-wrapper {
  position: relative;
  height: 720px;
}

.slide {
  background-color: transparent;
  height: 100%;
  width: 100%;
  overflow: auto;
  position: absolute;
  left: 0;
  top: 0;
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
}

.slide-img {
  filter: brightness(100%);
  // height: 93.5%;
  width: calc(100% - 15%);
  object-fit: fill;
  display: block;
  margin: 0 0 0 34%;
}

.slide-figure {
  height: 100%;
  width: calc(100% - 19%);
  position: relative;
  margin: 0;
}

// project information
.slide-caption {
  position: absolute;
  top: 0;
  padding: 0 0 0 7%;
  width: calc(100% - 70%);
  color: $white;
  text-align: left;
  overflow: auto;
  .caption {
    font-family: "Dancing Script", cursive;
    padding-bottom: 5px;
    padding-top: 5px;
    &::after {
      content: "";
      height: 2px;
      display: block;
      position: relative;
      width: 20px;
      background-color: $white;
    }
  }
  ul {
    margin: 0;
  }
  li {
    font-size: 16px;
  }
  .website,
  a {
    text-decoration: none;
    color: $green;
    font-size: 15px;
  }
  .website:hover {
    color: $greenhover;
  }
  .original {
    font-size: 24px;
  }
}
// pallet
.colours {
  display: flex;
  flex-direction: row;
  div {
    margin: 0 10px 7px 0;
  }
}

// slider located on landing.html.erb
.trigger:checked + .slide {
  opacity: 1;
  z-index: 100;
}

.slider-nav {
  width: 100%;
  text-align: right;
  margin: 2% 0 2% -8rem;
}

.slider-nav__item {
  display: inline-block;
}

.slider-nav__label {
  font-size: 17px;
  background-color: $green;
  display: block;
  margin: 0 5px;
  height: 2.5em;
  line-height: 2.5em;
  width: 2.5em;
  text-align: center;
  border-radius: 50%;
  color: $white;
  cursor: pointer;
  transition: background-color 0.25s, color 0.25s ease-in-out;
}

.slider-nav__label:hover,
.slider-nav__label:active,
.slider-nav__label:focus {
  background-color: $greenhover;
  color: $gray;
}

